<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.RegisterActivity"
        android:paddingHorizontal="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginTop="38dp"
            android:text="@string/daftar"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:text="@string/selamat_datang"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/masukkan_nama"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/ketik_namamu_di_sini" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/masukkan_email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/ketik_salah_satu_di_sini" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:text="@string/kata_sandi"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="32dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:hint="@string/ketik_di_sini"
            />

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAlignment="viewEnd"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:text="Lupa Kata Sandi?"-->
<!--            />-->

        <Button
            android:id="@+id/btn_Daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="14dp"
            android:textSize="16sp"
            android:text="Daftar"
            />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:textSize="14sp"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:text="atau masuk dengan"-->
<!--            />-->

<!--        <Button-->
<!--            style="@style/Widget.Material3.Button.OutlinedButton.Icon"-->
<!--            app:iconTint="@null"-->
<!--            app:iconGravity="textStart"-->
<!--            app:iconPadding="16dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:padding="14dp"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="@color/black"-->
<!--            android:text="Masuk"-->
<!--            />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginVertical="32dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:textSize="14sp"-->
<!--            android:text="Belum punya akun? Daftar"-->
<!--            />-->
    </LinearLayout>
</ScrollView>